--- a/main.css
+++ b/main.css
@@ -120,7 +120,7 @@ body *, .userPopout-3XzG_A * {
 .wordmarkWindows-2dq6rw::after {
   content: '';
   display: inline-block;
-  -webkit-mask-image: url("https://www.dropbox.com/s/68evtmm14ucocmb/title.svg?dl=1");
+  -webkit-mask-image: url("https://github.com/ShanersDigitalWorld/Discomods/blob/main/title.svg");
   -webkit-mask-repeat: no-repeat;
   -webkit-mask-size: cover;
   background-color: var(--highlight);
