--- a/main.css
+++ b/main.css
@@ -120,7 +120,7 @@ body *, .userPopout-3XzG_A * {
 .wordmarkWindows-2dq6rw::after {
   content: '';
   display: inline-block;
-  -webkit-mask-image: url("https://github.com/ShanersDigitalWorld/Discomods/blob/54ab94557c23f484b7658bec6ad8722451990b1e/title.svg");
+  -webkit-mask-image: url("https://commandcrafterhd.github.io/Fallout4TerminalTheme/css/main.css");
   -webkit-mask-repeat: no-repeat;
   -webkit-mask-size: cover;
   background-color: var(--highlight);
